--- a/src/styles/optional-feature-display.scss
+++ b/src/styles/optional-feature-display.scss
@@ -138,6 +138,7 @@
 
   .feature-description {
     margin-bottom: $spacing-2xl;
+    font-size: $font-size-sm;
 
     h4 {
       color: $gray-700;
