--- a/src/styles/item-display.scss
+++ b/src/styles/item-display.scss
@@ -151,3 +151,280 @@
 .item-details {
   @include content-section($color-item);
 }
+
+// Mobile optimizations for item display
+@media (max-width: 768px) {
+  .item-display {
+    .loading-message {
+      padding: $spacing-lg;
+    }
+
+    .item-header {
+      margin-bottom: $spacing-lg;
+      padding: $spacing-md;
+
+      .item-type {
+        font-size: $font-size-base;
+      }
+
+      .item-rarity {
+        padding: $spacing-xs $spacing-md;
+        font-size: $font-size-xs;
+      }
+    }
+
+    .item-properties {
+      margin-bottom: $spacing-lg;
+    }
+
+    .magic-properties {
+      h4 {
+        margin: 0 0 $spacing-md 0;
+      }
+    }
+
+    .weapon-properties {
+      h4 {
+        margin: 0 0 $spacing-md 0;
+      }
+    }
+
+    .armor-properties {
+      h4 {
+        margin: 0 0 $spacing-md 0;
+      }
+    }
+
+    .item-description {
+      margin-bottom: $spacing-lg;
+    }
+
+    .additional-entries {
+      h4 {
+        margin: 0 0 $spacing-md 0;
+      }
+    }
+
+    .item-variants {
+      h4 {
+        margin: 0 0 $spacing-md 0;
+      }
+
+      .variant-item {
+        margin-bottom: $spacing-md;
+        padding-left: $spacing-md;
+
+        h5 {
+          margin: 0 0 $spacing-xs 0;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .item-display {
+    .loading-message {
+      padding: $spacing-md;
+    }
+
+    .item-header {
+      margin-bottom: $spacing-sm;
+      padding: $spacing-sm;
+
+      .item-type {
+        font-size: $font-size-sm;
+      }
+
+      .item-rarity {
+        padding: 2px $spacing-sm;
+        font-size: $font-size-xs;
+      }
+    }
+
+    .item-properties {
+      margin-bottom: $spacing-sm;
+    }
+
+    .magic-properties {
+      h4 {
+        margin: 0 0 $spacing-sm 0;
+      }
+    }
+
+    .weapon-properties {
+      h4 {
+        margin: 0 0 $spacing-sm 0;
+      }
+    }
+
+    .armor-properties {
+      h4 {
+        margin: 0 0 $spacing-sm 0;
+      }
+    }
+
+    .item-description {
+      margin-bottom: $spacing-sm;
+    }
+
+    .additional-entries {
+      h4 {
+        margin: 0 0 $spacing-sm 0;
+      }
+    }
+
+    .item-variants {
+      h4 {
+        margin: 0 0 $spacing-sm 0;
+      }
+
+      .variant-item {
+        margin-bottom: $spacing-sm;
+        padding-left: $spacing-sm;
+
+        h5 {
+          margin: 0 0 2px 0;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 360px) {
+  .item-display {
+    .loading-message {
+      padding: $spacing-sm;
+    }
+
+    .item-header {
+      margin-bottom: $spacing-xs;
+      padding: $spacing-xs;
+
+      .item-type {
+        font-size: $font-size-xs;
+      }
+
+      .item-rarity {
+        padding: 1px $spacing-xs;
+        font-size: 10px;
+      }
+    }
+
+    .item-properties {
+      margin-bottom: $spacing-xs;
+    }
+
+    .magic-properties {
+      h4 {
+        margin: 0 0 $spacing-xs 0;
+      }
+    }
+
+    .weapon-properties {
+      h4 {
+        margin: 0 0 $spacing-xs 0;
+      }
+    }
+
+    .armor-properties {
+      h4 {
+        margin: 0 0 $spacing-xs 0;
+      }
+    }
+
+    .item-description {
+      margin-bottom: $spacing-xs;
+    }
+
+    .additional-entries {
+      h4 {
+        margin: 0 0 $spacing-xs 0;
+      }
+    }
+
+    .item-variants {
+      h4 {
+        margin: 0 0 $spacing-xs 0;
+      }
+
+      .variant-item {
+        margin-bottom: $spacing-xs;
+        padding-left: $spacing-xs;
+
+        h5 {
+          margin: 0 0 1px 0;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  .item-display {
+    .loading-message {
+      padding: $spacing-xs;
+    }
+
+    .item-header {
+      margin-bottom: $spacing-2xs;
+      padding: $spacing-2xs;
+
+      .item-type {
+        font-size: 10px;
+      }
+
+      .item-rarity {
+        padding: 0 2px;
+        font-size: 9px;
+      }
+    }
+
+    .item-properties {
+      margin-bottom: $spacing-2xs;
+    }
+
+    .magic-properties {
+      h4 {
+        margin: 0 0 $spacing-2xs 0;
+      }
+    }
+
+    .weapon-properties {
+      h4 {
+        margin: 0 0 $spacing-2xs 0;
+      }
+    }
+
+    .armor-properties {
+      h4 {
+        margin: 0 0 $spacing-2xs 0;
+      }
+    }
+
+    .item-description {
+      margin-bottom: $spacing-2xs;
+    }
+
+    .additional-entries {
+      h4 {
+        margin: 0 0 $spacing-2xs 0;
+      }
+    }
+
+    .item-variants {
+      h4 {
+        margin: 0 0 $spacing-2xs 0;
+      }
+
+      .variant-item {
+        margin-bottom: $spacing-2xs;
+        padding-left: $spacing-2xs;
+
+        h5 {
+          margin: 0;
+        }
+      }
+    }
+  }
+}
