--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,6 +12,7 @@ $font-weight-semibold: 600;
 $font-weight-bold: 700;
 
 // Font Sizes
+$font-size-2xs: 0.625rem;
 $font-size-xs: 0.75rem;
 $font-size-sm: 0.875rem;
 $font-size-base: 1rem;
@@ -62,6 +63,7 @@ $color-error: #8b1538;
 $color-info: #2980b9;
 
 // Spacing Scale
+$spacing-2xs: 0.125rem;
 $spacing-xs: 0.25rem;
 $spacing-sm: 0.5rem;
 $spacing-md: 0.75rem;
